--- a/training/frontend/UI.html
+++ b/training/frontend/UI.html
@@ -18,7 +18,7 @@
 
     <div class="overlay2">
         <button class="close" onclick="hide()"> X </button>
-        <input class="input2" type="gmail" placeholder="Email">
+        <input class="input2" id='gmail' type="gmail" placeholder="Email">
         <input class="input2" id="pass" type="password" placeholder="Password">
         <input class="input2" id="confPass" type="password" placeholder="Confirm">
         <h class="h"> </h>
