--- a/training/frontend/LoginPg.html
+++ b/training/frontend/LoginPg.html
@@ -23,38 +23,13 @@
 
 <div>
     <button class="button" > <i class="fa-solid fa-house-user"></i> Home </button>
-    <button class="button" > <i class="fa-solid fa-book"></i> Books </button>
+    <button class="button" onclick="getBooks()"> <i class="fa-solid fa-book"></i>  Books </button>
     <button class="button" > <i class="fa-solid fa-book-open"></i> My books </button>
     <button class="button" > <i class="fa-solid fa-arrow-right-from-bracket"></i> Log Out </button>
  </div>
 
     </div>
 
-    <div class="books">
-
-<table class="table">
-
-    <tr class="table">
-    <th>Image</th>
-    <th>Name</th>
-    <th>Author</th>
-    <th>ISBN</th>
-    <th>Price</th>
-    <th>Shelf</th>
-    <th>Row</th>
-    <th> Availability </th>
-
-
-
-
-    </tr>
-    
-</div>
-
-</table>
-
-
-
-
+<script src="Loginpg.js"></script>
 </body>
 </html>
