--- a/training/frontend/Dashboard.html
+++ b/training/frontend/Dashboard.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <title>Library</title>
@@ -15,6 +14,8 @@
       media="screen"
       href="Dashboard.css"
     />
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body class="background-image">
     <div class="sideBar">
@@ -30,7 +31,7 @@
         <button class="button">
           <i class="fa-solid fa-house-user"></i> Home
         </button>
-        <button class="button" onclick="getBooks()">
+        <button class="button" id="getBooks">
           <i class="fa-solid fa-book"></i> Books
         </button>
         <button class="button">
@@ -42,6 +43,24 @@
       </div>
     </div>
 
-    <script src="Dashboard.js"></script>
+    <table class="table">
+      <tr>
+        <th>Name</th>
+        <th>Author</th>
+        <th>ISBN</th>
+        <th>Access No.</th>
+        <th>Price</th>
+        <th>Shelf No.</th>
+        <th>Row No.</th>
+        <th>Availability</th>
+        <th>Next Availabe</th>
+      </tr>
+
+      <tbody class="myTable"></tbody>
+    </table>
+
+    <script src="Dashboard.js" type="module"></script>
+    <script src="getUser.js" type="module"></script>
+    <script src="getBooks.js" type="module"></script>
   </body>
 </html>
