get users working

--- a/training/frontend/Login_Pg.html
+++ b/training/frontend/Login_Pg.html
@@ -11,15 +11,11 @@
       />
     </head>
     <body background="https://wallpaperaccess.com/full/3133075.jpg">
+
       <div class="overlay hidden">
         <button class="close" onclick="hide()">X</button>
         <input class="input" id="logmail" type="gmail" placeholder="Email" />
-        <input
-          class="input"
-          id="logpass"
-          type="password"
-          placeholder="Password"
-        />
+        <input class="input" id="logpass" type="password" placeholder="Password" />
         <!-- 
     <select class="dropDown" >
         <option >Member</option>
