--- a/training/frontend/Dashboard.html
+++ b/training/frontend/Dashboard.html
@@ -37,7 +37,7 @@
         <button class="button">
           <i class="fa-solid fa-book-open"></i> My books
         </button>
-        <button class="button">
+        <button class="button" id="LogOut">
           <i class="fa-solid fa-arrow-right-from-bracket"></i> Log Out
         </button>
       </div>
@@ -48,5 +48,6 @@
     </table>
 
     <script src="getBooks.js" type="module"></script>
+    <script src="Dashboard.js" type="module"></script>
   </body>
 </html>
