--- a/training/frontend/librarian.html
+++ b/training/frontend/librarian.html
@@ -59,6 +59,8 @@
       <input class="input" id="shelf" type="number" placeholder="Shelf No." />
       <input class="input" id="row" type="number" placeholder="Row No." />
 
+      <div><h class="text1"> </h></div>
+
       <button class="addButton" id="addBook">Add</button>
     </div>
 
@@ -70,9 +72,12 @@
         <option>Librarian</option>
       </select>
       <input class="input2" id="userName" type="Text" placeholder="Username" />
+
       <input class="input2" id="email" type="Text" placeholder="Email" />
+
       <input class="input2" id="pass" type="Text" placeholder="Password" />
 
+      <div><h class="text2"> </h></div>
       <button class="addUser" id="addUser">Add</button>
     </div>
 
