--- a/training/frontend/Login_Pg.html
+++ b/training/frontend/Login_Pg.html
@@ -17,6 +17,8 @@
         <input class="input" id="logmail" type="gmail" placeholder="Email" />
         <input class="input" id="logpass" type="password" placeholder="Password" />
 
+         <h class="h"> </h>
+
         <button class="loginButton" onclick="login()">Login</button>
       </div>
 
