--- a/training/frontend/Dashboard.html
+++ b/training/frontend/Dashboard.html
@@ -34,16 +34,16 @@
         <button class="button" id="getBooks">
           <i class="fa-solid fa-book"></i> Books
         </button>
-         <button class="button" id="myBooks">
+        <button class="button" id="myBooks">
           <i class="fa-solid fa-book-open"></i> My Books
         </button>
         <button class="button" id="getUser">
           <i class="fa-solid fa-users"></i> Users
         </button>
-        <button class="button" id="addB"">
+        <button class="button" id="addB">
           <i class="fa-solid fa-plus"></i> Add Book
         </button>
-        <button class="button" id="addU"">
+        <button class="button" id="addU">
           <i class="fa-solid fa-plus"></i> Add User
         </button>
         <button class="button" id="logOut">
@@ -84,6 +84,10 @@
       <button class="addUser" id="addUser">Add</button>
     </div>
 
+    <table class="books">
+      <tbody class="myBooks"></tbody>
+    </table>
+
     <table class="table">
       <tbody class="myTable"></tbody>
     </table>
@@ -92,6 +96,7 @@
     <script src="getBooks.js" type="module"></script>
     <script src="getUser.js" type="module"></script>
     <script src="addUser.js" type="module"></script>
+    <script src="myBooks.js" type="module"></script>
     <script src="Dashboard.js"></script>
   </body>
 </html>
